# project2_Khilalov_Muslim_M25-555

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/primitive_db/: core.py  db_meta.json  engine.py  main.py  parser.py  utils.py
