[project]
name = "project2-khilalov-muslim-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "Muslim Khilalov",email = "hilalov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
 packages = [
     { include = "src" },
 ]
 
[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
